<resources>
    <string name="app_name">ManageYourRenters</string>
    <string name="add_renter_button">add Renter button</string>
    <string name="house_renters">House Renters</string>
    <string name="searchbtn">searchBtn</string>
    <string name="search_here">Search Here</string>
    <string name="google_sign_in">Google Sign-In</string>
    <string name="add_renter">Add Renter</string>
    <string name="addrenterbtn">addRenterBtn</string>
    <string name="backbtn">backBtn</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="e_mail_optional">E-Mail (Optional)</string>
    <string name="document_name">Document name</string>
    <string name="room_number_or_room_id_or_house_number">Room number or Room Id or House Number</string>
    <string name="any_other_identification_document_optional">Any Other Identification Document (Optional)</string>
    <string name="document_number">Document number</string>
    <string name="address">Address</string>
    <string name="payments">Payments</string>
    <string name="renter_payments">RenterPayments</string>
    <string name="menubtn">Menu Button</string>
    <string name="addpaymentfab">addPaymentFAB</string>
    <string name="renter_name">Renter name</string>
    <string name="nul">null</string>
    <string name="select_period">Select Period</string>
    <string name="by_month">By Month</string>
    <string name="by_date">By Date</string>
    <string name="from">From</string>
    <string name="till">Till</string>
    <string name="enter_a_valid_date">Enter a valid date</string>
    <string name="house_rent">House Rent</string>
    <string name="electricity_optional">Electricity (Optional)</string>
    <string name="previous_reading">Previous Reading</string>
    <string name="_0_0">0.0</string>
    <string name="current_reading">Current Reading</string>
    <string name="rate">Rate</string>
    <string name="parking_optional">Parking (Optional)</string>
    <string name="parking">Parking</string>
    <string name="extra_if_any">Extra (if Any)</string>
    <string name="field_name">Field name</string>
    <string name="amount">Amount</string>
    <string name="dues_if_any">Dues (If Any)</string>
    <string name="due_amount">Due Amount</string>
    <string name="see_total">See Total</string>
    <string name="_0">₹ 0</string>
    <string name="savebtn">saveBtn</string>
    <string name="add_payment">Add Payment</string>
    <string name="f">false</string>
    <string name="t">true</string>
    <string name="renters">Renters</string>
    <string name="no_renters_added_message">Looks like your rooms are empty???</string>
    <string name="delete_warning_message">[Warning] : After deletion it CANNOT BE RETRIEVED AGAIN.</string>
    <string name="same_day">Same day</string>
    <string name="electricity_error_message">Previous reading must be less than current reading</string>
    <string name="total">Diff: %1$s |  Total: %2$s</string>
    <string name="bill">BILL</string>
    <string name="renter_information">Renter Information</string>
    <string name="name_">Name : </string>
    <string name="Null">null</string>
    <string name="mobile_number_">Mobile Number : </string>
    <string name="address_n_n">Address : </string>
    <string name="e_mail_id_">Email-Id : </string>
    <string name="billing_parameter">Billing Parameters</string>
    <string name="payment_date_and_time">Payment date/time : </string>
    <string name="period_">Period : </string>
    <string name="electricity">Electricity</string>
    <string name="previous_reading_">Previous Reading : </string>
    <string name="current_reading_">Current Reading : </string>
    <string name="rate_">Rate : </string>
    <string name="difference">Difference</string>
    <string name="total_">Total : </string>
    <string name="total_rent">Total Rent</string>
    <string name="extra_">Extra</string>
    <string name="net_demand">Net demand</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="due">due</string>
    <string name="paid_in_advance">Paid in advance </string>
    <string name="borrowers">Borrowers</string>
    <string name="track_money">Track money</string>
    <string name="mobileNumberErrorMessage">Please enter a valid mobile number!!</string>
    <string name="add_borrower">Add borrower</string>
    <string name="borrowerPayments">Borrower_Payments</string>
    <string name="borrower_name">Borrower name</string>
    <string name="borrowed_amount">Borrowed Amount</string>
    <string name="add_a_note_optional_n_n_n_n_n_n_n">Add a note.... (Optional) \n\n\n\n\n\n\n</string>
    <string name="select_date_button">select_date_button</string>
    <string name="supporting_document">View supporting document</string>
    <string name="interest">Interest</string>
    <string name="type">Type</string>
    <string name="edit_borrower">Edit Borrower</string>
    <string name="pdf">pdf</string>
    <string name="image">image</string>
    <string name="url">url</string>
    <string name="please_wait">Please wait…</string>
    <string name="sync_borrower_payments">syncing borrower payments…</string>
    <string name="sync_partial_payments">syncing partial payments…</string>
    <string name="sync_renters_payments">syncing renters payments…</string>
    <string name="sync_borrowers">syncing borrowers…</string>
    <string name="time_schedule">Time schedule</string>
    <string name="simple_interest">Simple interest</string>
    <string name="compound_interest">Compound interest</string>
    <string name="rete_percent">Rete percent</string>
    <string name="percent_sign">%</string>
    <string name="imagebutton">imagebutton</string>
    <string name="file_name">File name</string>
    <string name="enter_url_here">Enter url here</string>
    <string name="for_uploading_file_you_need_to_have_active_internet_connection">*For uploading file you need to have active internet connection.</string>
    <string name="add_file">Add file</string>
    <string name="add_interest">Add interest</string>
    <string name="add_supporting_document">Add supporting document</string>
    <string name="mark_this_payment_as_done">Mark this payment as done</string>
    <string name="add_partial_payment">Add partial payment</string>
    <string name="enter_amount">Enter amount</string>
    <string name="no_partial_payment_is_added">No partial payments are added</string>
    <string name="partialPayments">Partial_Payments</string>
    <string name="downloading_file">downloading file…</string>
    <string name="_02_06_2000">02–06–2000</string>
    <string name="calculate_interest">Calculate Interest</string>
    <string name="calculate_interest_message">Note : \nInterest is calculated on below assumptions: \n\n* 1 month = 30 days\n* 1 year = 365 days\n\nBased on these assumptions the calculated result may not be accurate.</string>
    <string name="principal">Principal</string>
    <string name="interest_">Interest :</string>
    <string name="calculate">Calculate</string>
    <string name="emi">EMI</string>
    <string name="loan">Loan</string>
    <string name="monthly_payments">Monthly Payments</string>
    <string name="no_borrowers_message">Press add (+) below to add the details of the borrower</string>
    <string name="addemicategoryfab">addEmiCategoryfab</string>
    <string name="emi_name">EMI name</string>
    <string name="enter_a_name_for_the_emi_for_example_car_emi_bike_emi_etc">* enter a name for the EMI. For example : CAR, HOUSE, etc.</string>
    <string-array name="time">

        <item>days</item>
        <item>months</item>
        <item>years</item>
    </string-array>
    <string name="start_date_of_the_emi">Start date of the EMI</string>
    <string name="total_number_of_months">Total number of months</string>
    <string name="months_completed">Months completed (optional)</string>
    <string name="total_months_for_which_emi_is_taken">Total months for which EMI is taken</string>
    <string name="number_of_months_completed_till_now">Number of months completed till now</string>
    <string name="amount_per_month">Amount per month</string>
    <string name="amount_to_paid_per_month">Amount to be paid per month</string>
    <string name="total_emi_amount_total_months_amount_per_month">Total EMI amount (total months * amount per month)</string>
    <string name="amount_paid_till_now">Amount paid till now</string>
    <string name="__0">0</string>
    <string name="contract_deals">Contracts / Deals</string>
    <string name="emis">EMIs</string>
    <string name="no_EMI_added_message">Click the add (+) button below to add an EMI</string>
    <string name="edit">Edit</string>
    <string name="_delete">Delete</string>
    <string name="delete_supporting_document">Delete supporting document</string>
    <string name="replace_supporting_document">Add / Replace supporting document</string>
    <string name="no_supporting_doc_added">No supporting document added!!!</string>
    <string name="no_payments_made_for_this_emi">No payments made for this EMI. Click the (+) button for adding payments</string>
    <string name="add_emi_payment">Add EMI payment</string>
    <string name="show_emi_details">Details</string>
    <string name="months_completed_">Months completed :</string>
    <string name="amount_paid_">Amount Paid:</string>
    <string name="paid_on">Paid on</string>
    <string name="till_month">Till month</string>
    <string name="for_the_month_s">For the month(s)</string>
    <string name="current_status">Current status :</string>
    <string name="from_month">From month</string>
    <string name="to_month">To month</string>
    <string name="amount_paying">Amount Paying</string>
    <string name="emiPayments">EMI_Payments</string>
    <string name="delete_this_payment">Delete This Payment</string>
    <string name="view_message_or_note">View Message or Note</string>
    <string name="document">Document</string>
    <string name="sync_emis">syncing emis…</string>
    <string name="sync_emi_payments">syncing emi payments…</string>
    <string name="expenses">Expenses</string>
    <string name="show_graph">Show graph</string>
    <string name="search">Search</string>
    <string name="all_time">All time</string>
    <string name="select_range">Select range</string>
    <string name="show_all_expenses">Show All Expenses</string>
    <string name="expense_disabled_message">expense shortcut is disabled for now</string>
    <string name="house_renters_disabled_message">house renters shortcut is disabled</string>
    <string name="deep_analyze_mode">Category compare graph</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_365_days">Last 365 days</string>
    <string name="custom_range">Custom range</string>
    <string name="this_month">This month</string>
    <string name="this_week">This week</string>
    <string name="previous_month">Previous month</string>
    <string name="previous_week">Previous week</string>
    <string name="share_screenshot">Share screenshot</string>
    <string name="save_screenshot">Save screenshot</string>
    <string name="revenue">Revenue</string>
    <string name="total_number_of_renters">Total number of renters</string>
    <string name="no_monthly_payment_added_message">Click (+) button to add payments in this category</string>
    <string name="add_monthly_payment">Add monthly payment</string>
    <string name="graphs">Graphs</string>
    <string name="monthly_graph">Monthly Graph</string>
    <string name="payment_methods">Payment methods</string>
    <string name="add_filter">Filter</string>
    <string name="budget_and_income">Budget and Income</string>
    <string name="category_graph">Category graph</string>
    <string name="screenshot">Screenshot</string>
    <string name="importer">Importer</string>
    <string name="exporter">Exporter</string>
</resources>