<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_date_range_all_time"
        android:title="@string/all_time" />
    <item
        android:id="@+id/menu_date_range_custom_range"
        android:title="@string/custom_range" />
    <item
        android:id="@+id/menu_date_range_this_month"
        android:title="@string/this_month" />
    <item
        android:id="@+id/menu_date_range_this_week"
        android:title="@string/this_week" />
    <item
        android:id="@+id/menu_date_range_previous_month"
        android:title="@string/previous_month" />
    <item
        android:id="@+id/menu_date_range_previous_week"
        android:title="@string/previous_week" />
    <item
        android:id="@+id/menu_date_range_last_30_days"
        android:title="@string/last_30_days" />
    <item
        android:id="@+id/menu_date_range_last_7_days"
        android:title="@string/last_7_days" />
    <item
        android:id="@+id/menu_date_range_last_365_days"
        android:title="@string/last_365_days" />

</menu>