<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search_expense_category"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_expense_graph"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/show_graph"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_show_all_expenses"
        android:title="@string/show_all_expenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_payment_methods_expense"
        android:title="@string/payment_methods"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_create_budget"
        android:title="@string/budget_and_income"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_expenses"
        android:title="@string/importer"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_expenses"
        android:title="@string/exporter"
        app:showAsAction="never" />

</menu>