<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_expense_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_expense_date_range"
        android:icon="@drawable/ic_baseline_date_range_24"
        android:title="@string/select_range"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_expense_clear_date_range"
        android:title="Clear date range" />
    <item
        android:id="@+id/menu_total_expense"
        android:title="@string/see_total"
        app:showAsAction="never" />
</menu>