<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="3dp"
        android:text="@string/type"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/docTypeRG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/docTypeRG" />

    <RadioGroup
        android:id="@+id/docTypeRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/pdfRB"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/pdfRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/pdf"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/imageRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/image"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/urlRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/url"
            android:textSize="14sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/fileNameET"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/file_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/docTypeRG"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/urlET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_url_here"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:textColor="#2962FF"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/removeFileBtn"
        app:layout_constraintStart_toStartOf="@+id/fileNameET"
        app:layout_constraintTop_toBottomOf="@+id/fileNameET"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/removeFileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/color_white"
        android:contentDescription="@string/imagebutton"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fileNameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fileNameET"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24"
        tools:visibility="visible" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/addFileMCV"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:cardBackgroundColor="#DEDEDE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlET"
        app:strokeColor="@color/textColor1"
        app:strokeWidth="0.5dp"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/add_file"
                android:textColor="@color/primaryTextColor"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_baseline_add_circle_outline_24" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/divider55"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFileMCV"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>