<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/monthly_payments" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/monthly_paymentRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_monthly_payment"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/no_monthly_payment_category_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/no_monthly_payment_added_message"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_monthly_payments_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_monthly_payment"
        android:src="@drawable/ic_baseline_add_24"
        android:tooltipText="@string/add_monthly_payment"
        tools:targetApi="o" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>